
OpenSLP Change Log
------------------

Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

10/06/00 mpeterson@caldera.com
Fixed timing bug in slpd where in some cases a non-blocking recvfrom() was 
called before any data could possibly be in the stream.  This would cause
libslp to return unexplained -19 on SLPReg() and friends.

10/05/00 mpeterson@caldera.com
Active DA discovery is now working correctly.  There is still need for 
code to be added so the DAAdvert statless bootstamp is honored correctly.
The SA should re-register all services with a DA if it is new or bootstamp
is stale

09/29/00 rganesan@myrealbox.com
Implemented SLPv1 support when running as a DA. This can be turned off by the
configure option --disable-slpv1. New files common/slp_v1message.h,
common/slp_v1message.c, slpd/slpd_v1process.c. SLPv1 packets can have multiple
character encodings, OpenSLP supports only ASCII and Unicode encodings.

*** TAG OpenSLP 0.7.6 ***

09/27/00 hughes@lab43.org
Changed slpd's internal representation of attributes to use libslpattr. This
gives  much finer control over attributes, paving the way for filter support
and attribute freshening. 

09/27/00 hughes@lab43.org
Integrated filter support into slpd. This can be found in 
slpd/slpd_predicate.*. Regression test added in test.  

09/19/00 rganesan@myrealbox.com
Changed slpd to bind the multicast socket to INADDR_ANY instead of the SLP 
multicast address. Binding to the multicast address causes BSD derived OSs
to put the multicast address instead of the host address on outgoing packets.
With this fix (and a couple of others), OpenSLP works on FreeBSD and 
Compaq Tru64. 

09/18/00 mdes@ocegr.fr