@@ -81,7 +81,6 @@ SLPError ProcessAttrRqst(PSLPHandleInfo handle)
 /*-------------------------------------------------------------------------*/
 {
     struct sockaddr_in  peeraddr;
-    int                 sock        = 0;
     int                 bufsize     = 0;
     char*               buf         = 0;
     char*               curpos      = 0;
@@ -130,23 +129,9 @@ SLPError ProcessAttrRqst(PSLPHandleInfo handle)
     /* TODO: add spi list stuff here later*/
     ToUINT16(curpos,0);
     
-    /*---------------------------------------*/
-    /* Connect to DA, multicast or broadcast */
-    /*---------------------------------------*/
-    sock = NetworkConnectToDA(handle->params.findattrs.scopelist,
-                              handle->params.findattrs.scopelistlen,
-                              &peeraddr);
-    if(sock < 0)
-    {
-        sock = NetworkConnectToMulticast(&peeraddr);
-        if(sock < 0)
-        {
-            result = SLP_NETWORK_INIT_FAILED;
-            goto FINISHED;
-        }
-    }
-
-    result = NetworkRqstRply(sock,
+    
+    /* try first with existing DA socket */    
+    result = NetworkRqstRply(handle->dasock,
                              &peeraddr,
                              handle->langtag,
                              buf,
@@ -154,6 +139,37 @@ SLPError ProcessAttrRqst(PSLPHandleInfo handle)
                              bufsize,
                              CallbackAttrRqst,
                              handle);
+
+    /* Connect / Re-connect and try again on error*/
+    if(result)
+    {
+        if(handle->dasock >= 0)
+        {
+            close(handle->dasock);
+        }
+
+        handle->dasock = NetworkConnectToDA(handle->params.findattrs.scopelist,
+                                            handle->params.findattrs.scopelistlen,
+                                            &peeraddr);
+        if(handle->dasock < 0)
+        {
+            handle->dasock = NetworkConnectToMulticast(&peeraddr);
+            if(handle->dasock < 0)
+            {
+                result = SLP_NETWORK_INIT_FAILED;
+                goto FINISHED;
+            }
+        }
+
+        result = NetworkRqstRply(handle->dasock,
+                          &peeraddr,
+                          handle->langtag,
+                          buf,
+                          SLP_FUNCT_ATTRRQST,
+                          bufsize,
+                          CallbackAttrRqst,
+                          handle);
+    }
     
     FINISHED:
     if(buf) free(buf);
